--- a/styles/editor.less
+++ b/styles/editor.less
@@ -18,11 +18,9 @@
       &, // <-- Deprecated. The `&,` can be removed once the Shadow DOM can't be turned off in the settings.
       &::shadow {
         .placeholder-text {
-          padding-left: @component-padding/2;
           color: @text-color-subtle;
         }
         .selection .region {
-          padding-left: @component-padding/2;
           background-color: @background-color-selected;
         }
       }
