--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -9,10 +9,6 @@
       background-color: @tab-bar-background-color;
       border-bottom: 1px solid @base-border-color;
 
-      &::-webkit-scrollbar {
-          display: none;
-      }
-
       .tab {
         color: @text-color;
         height: @tab-height;
